# logistics

./: .gitignore  Home.py  README.md  ali_sean_wedding.py  index.md  index2.md  main.py  open_page_to_stay_awake.py  practice.py  pyproject.toml  timeline_data.json  user_agent_data.py  uv_dependencies.txt  uv_dependencies_less.txt
.github/workflows/: auto-commit.yml  auto-commit2.yml  wake_up.yml
other_pages/: index.md  other.py
pages/: 1_Maps and Guides.py  1_Useful Guides.py  1_Useful Maps.py  2_I Have Responsibilities.py  2_Useful Maps_2.py  3_Sharing_Photos.py  3_Test.py  3_Visual Timeline.py  4_Decor_Inventory.py  4_Timeline JS3.py
pages/hidden_pages/: 1_Useful Maps_original.py  3_Test.py  4_Test2.py  5_Timeline_JS3_library.py  index.md  index2.md  other.py
wedding.egg-info/: PKG-INFO  SOURCES.txt
