[project]
name = "wedding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.0",
    "st-gsheets-connection>=0.1.0",
    "streamlit>=1.46.1",
    "streamlit-image-select>=0.6.0",
]
[tool.poetry]
name = "wedding"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false
